content/terraform-plugin-testing/v1.14.x/docs/plugin/testing/acceptance-tests/teststep.mdx
---
page_title: 'Plugin Development - Acceptance Testing: TestStep'
description: |-
  TestSteps represent the application of an actual Terraform configuration
  file to a given state.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-25T14:07:10+01:00
last_modified: 2025-12-04T13:12:26+01:00
# END AUTO GENERATED METADATA
---

# Acceptance Tests: TestSteps

`TestStep`s represent the application of an actual Terraform configuration file
to a given state. Each step requires a configuration as input and provides
developers several means of validating the behavior of the specific resource
under test.

## Test Modes

Terraform's test framework facilitates four distinct modes of acceptance tests,
_Lifecycle (config)_, _Import_, _Refresh_ and _Query_.

### Lifecycle (config) mode

_Lifecycle (config)_ mode is the most common mode. It tests plugins by
providing one or more configuration files with the same logic as would be used
when running `terraform apply`. Configuration is supplied by specifying
[TestStep.Config](/terraform/plugin/testing/acceptance-tests/configuration#teststep-config),
[TestStep.ConfigDirectory](/terraform/plugin/testing/acceptance-tests/configuration#teststep-configdirectory), or
[TestStep.ConfigFile](/terraform/plugin/testing/acceptance-tests/configuration#teststep-configfile).
Variables for use with configuration are defined by specifying
[TestStep.ConfigVariables](/terraform/plugin/testing/acceptance-tests/configuration#teststep-configvariables).

-> **Note:** To define a _Lifecycle (config)_ mode test step, use one of the
`Config`, `ConfigFile`, or `ConfigDirectory` fields.

```go
steps := []TestStep{
	{
		Config: `resource "random_string" { length = 12 }`,
	},
}
```

### Import mode

[_Import_ mode](/terraform/plugin/testing/acceptance-tests/import-mode)
exercises provider logic for importing existing infrastructure resources into a
Terraform statefile, using real Terraform import functionality.

-> **Note:** To define an _Import_ mode test step, set the `ImportState` field to `true`.

The recommended use of _Import_ mode is to run it after a _Lifecycle (config)_
mode test step. The testing framework uses the configuration and state of the
_Lifecycle (config)_ mode test step as known good values for any `_Import_`
mode test steps that follow it. As a result, _Import_ mode blocks tend to be
concise and idiomatic.

```go
steps := []TestStep{
	{
		Config: `resource "random_string" "puzzle" { length = 12 }`,
	},
	{
		ImportState: true,
		ImportStateKind: resource.ImportBlockWithID,
		ResourceName: `random_string.puzzle`,
	},
}
```


### Refresh mode

_Refresh_ mode runs `terraform refresh` to refresh the test case's Terraform state.

-> **Note:** To define a _Refresh_ mode test step, set the `RefreshState` field to `true`.

```go
steps := []TestStep{
	{
		Config: `resource "random_string" "puzzle" { length = 12 }`,
	},
	{
		RefreshState: true,
	},
}
```

### Query mode

_Query_ mode runs `terraform query` to test list resources. The configuration supplied
for a _Query_ mode test step are used as the contents of a `.tfquery.hcl` query file.

-> **Note:** To define a _Query_ mode test step, set the `Query` field to `true`.

It is recommended to use _Query_ mode after a _Lifecycle (config)_ mode test step that
creates instances of the resources to be listed.

```go
steps := []TestStep{
	{
		Config: `
          resource "random_string" "puzzle" { length = 12 }
          resource "random_string" "jigsaw" { length = 1000 }
        `,
	},
	{
		Config: `
          list "random_string" "test" {
            provider = examplecloud

            config {}
          }
        `,
		Query: true,
		QueryResultChecks: []querycheck.QueryResultCheck{
			querycheck.ExpectLengthExact("random_string.test", 2),
		}
	},
}
```

## Steps

`Steps` is a field within
[TestCase](/terraform/plugin/testing/acceptance-tests/testcase), the struct used
to construct acceptance tests. Each step represents a full `terraform apply` of
a given configuration language, followed by zero or more checks (defined later)
to verify the application. Each `Step` is applied in order, and require its own
configuration and optional check functions.

Below is a code example of a lifecycle test that provides two `TestStep` structs:

```go
package example

// example.Widget represents a concrete Go type that represents an API resource
func TestAccExampleWidget_basic(t *testing.T) {
  var widgetBefore, widgetAfter example.Widget
  rName := acctest.RandStringFromCharSet(10, acctest.CharSetAlphaNum)

  resource.Test(t, resource.TestCase{
    PreCheck:     func() { testAccPreCheck(t) },
    Providers:    testAccProviders,
    CheckDestroy: testAccCheckExampleResourceDestroy,
    Steps: []resource.TestStep{
      {
        Config: testAccExampleResource(rName),
        ConfigStateChecks: []statecheck.StateCheck{
          stateCheckExampleResourceExists("example_widget.foo", &widgetBefore),
        },
      },
      {
        Config: testAccExampleResource_removedPolicy(rName),
        ConfigStateChecks: []statecheck.StateCheck{
          stateCheckExampleResourceExists("example_widget.foo", &widgetAfter),
        },
      },
    },
  })
}
```

In the above example each `TestCase` invokes a function to retrieve it's desired
configuration, based on a randomized name provided, however an in-line string or
constant string would work as well, so long as they contain valid Terraform
configuration for the plugin or resource under test. This pattern of first
applying and checking a basic configuration, followed by applying a modified
configuration with updated or additional checks is a common pattern used to test
update functionality.

## Plan Checks

Before and after the configuration for a `TestStep` is applied, Terraform's
testing framework provides developers an opportunity to make test assertions
against `terraform plan` results via the plan file. This is provided via [Plan
Checks](/terraform/plugin/testing/acceptance-tests/plan-checks), which provide
both built-in plan checks and an interface to implement custom plan checks.

## State Checks

After the configuration for a `TestStep` is applied, Terraform's testing
framework provides developers an opportunity to check the results by providing
one or more [state check
implementations](/terraform/plugin/testing/acceptance-tests/state-checks).
While possible to only supply a single state check, it is recommended you use
multiple state checks to validate specific information about the results of the
`terraform apply` ran in each `TestStep`.

Refer to the [State Checks](/terraform/plugin/testing/acceptance-tests/state-checks)
section for more information about the built-in state checks for resources,
data sources, output values, and how to write custom state checks.

## Query Checks

After the configuration for a _Query_ mode `TestStep` is run, Terraform's
testing framework provides developers an opportunity to check the query results
by providing one or more [query check
implementations](/terraform/plugin/testing/acceptance-tests/query-checks).

Refer to the [Query Checks](terraform/plugin/testing/acceptance-tests/query-checks)
section for more information about the built-in query checks for list resources
and how to write custom query checks.

### Legacy Check function

<Note>

Use the new `ConfigStateChecks` attribute and [State Check implementations](/terraform/plugin/testing/acceptance-tests/state-checks)
instead of the `Check` function.

</Note>

The `Check` function is used to check results of a Terraform operation. The `Check`
attribute of `TestStep` is singular, so in order to include multiple checks
developers should use either `ComposeTestCheckFunc` or
`ComposeAggregateTestCheckFunc` (defined below) to group multiple check
functions, defined below:

#### ComposeTestCheckFunc

ComposeTestCheckFunc lets you compose multiple TestCheckFunc functions into a
single check. As a user testing their provider, this lets you decompose your
checks into smaller pieces more easily, with individual methods for checking
specific attributes. Each check is ran in the order provided, and on failure the
entire `TestCase` is stopped, and Terraform attempts to destroy any resources
created.

Example:

```go
Steps: []resource.TestStep{
  {
    Config: testAccExampleResource(rName),
    Check: resource.ComposeTestCheckFunc(
      // if testAccCheckExampleResourceExists fails to find the resource, 
      // the parent TestStep and TestCase fail
      testAccCheckExampleResourceExists("example_widget.foo", &widgetBefore), 
      resource.TestCheckResourceAttr("example_widget.foo", "size", "expected size"),
    ),
  },
},
```

#### ComposeAggregateTestCheckFunc

ComposeAggregateTestCheckFunc lets you compose multiple TestCheckFunc functions
into a single check. It's purpose and usage is identical to
ComposeTestCheckFunc, however each check is ran in order even if a previous
check failed, collecting the errors returned from any checks and returning a
single aggregate error. The entire `TestCase` is still stopped, and Terraform
attempts to destroy any resources created.

Example:

```go
Steps: []resource.TestStep{
  {
    Config: testAccExampleResource(rName),
    Check: resource.ComposeAggregateTestCheckFunc(
      // if testAccCheckExampleResourceExists fails to find the resource, 
      // the following TestCheckResourceAttr is still run, with any errors aggregated
      testAccCheckExampleResourceExists("example_widget.foo", &widgetBefore),
      resource.TestCheckResourceAttr("example_widget.foo", "active", "true"),
    ),
  },
},
```

#### Built-in check functions

Terraform has several TestCheckFunc functions built in for developers to use for
common checks, such as verifying the status and value of a specific attribute in
the resulting state. Developers are encouraged to use as many as reasonable to
verify the behavior of the plugin/resource, and should combine them with the
above mentioned `ComposeTestCheckFunc` or `ComposeAggregateTestCheckFunc`
functions.

Most builtin functions accept `name`, `key`, and/or `value` fields, derived from
the typical Terraform configuration stanzas:

```hcl
resource "example_widget" "foo" {
  active = true
}
```

Here the `name` represents the resource name in state (`example_widget.foo`),
the `key` represents the attribute to check (`active`), and `value` represents
the desired value to check against (`true`). In this case, an equality check
would be:

```go
resource.TestCheckResourceAttr("example_widget.foo", "active", "true"),
```

The full list of functions can be seen in the [`helper/resource` package](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource). Names for these begin with `TestCheck...` and `TestMatch...`. The most common checks for non-`TypeSet` attributes are below.

| Function                                                                                                                                                                                                      | Purpose                                                               |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [`TestCheckResourceAttr(name string, key string, value string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckResourceAttr)                                          | Value equality checks                                                 |
| [`TestMatchResourceAttr(name string, key string, regex *regexp.Regexp)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestMatchResourceAttr)                                  |                                                                       |
| Value regular expression checks                                                                                                                                                                               |                                                                       |
| [`TestCheckResourceAttrPair(nameFirst string, keyFirst string, nameSecond string, keySecond string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckResourceAttrPair) | Value equality across two attributes (usually in different resources) |
| [`TestCheckResourceAttrSet(name string, key string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckResourceAttrSet)                                                  | Passes if any value was set                                           |
| [`TestCheckNoResourceAttr(name string, key string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckNoResourceAttr)                                                    | Passes if no value was set                                            |

For `TypeSet` attributes, there are some additional functions that accept a `*` placeholder in attribute keys for indexing into the set.

| Function                                                                                                                                                                                                               | Purpose                                                                             |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------- |
| [`TestCheckTypeSetElemAttr(name string, key string, value string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckTypeSetElemAttr)                                          | Value is contained in set                                                           |
| [`TestCheckTypeSetElemAttrPair(nameFirst string, keyFirst string, nameSecond string, keySecond string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckTypeSetElemAttrPair) | Value is contained in set from another attribute (usually in different resources)   |
| [`TestCheckTypeSetElemNestedAttrs(name string, key string, values map[string]string)`](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckTypeSetElemNestedAttrs)                | Map of values is contained in set (usually checking multiple attributes of a block) |

All of these functions also accept the below syntax in attribute keys to enable additional behaviors.

| Syntax      | Purpose                           | Example                                                                         |
| ----------- | --------------------------------- | ------------------------------------------------------------------------------- |
| `.{NUMBER}` | List index                        | `TestCheckResourceAttr("example_widget.foo", "some_block.0", "first value")`    |
| `.{KEY}`    | Map key                           | `TestCheckResourceAttr("example_widget.foo", "some_map.some_key", "map value")` |
| `.#`        | Number of elements in list or set | `TestCheckResourceAttr("example_widget.foo", "some_list.#", "2")`               |
| `.%`        | Number of keys in map             | `TestCheckResourceAttr("example_widget.foo", "some_map.%", "2")`                |

### Custom check functions

The `Check` field of `TestStep` accepts any function of type
[TestCheckFunc](https://pkg.go.dev/github.com/hashicorp/terraform-plugin-testing/helper/resource#TestCheckFunc).
Developers are free to write their own `check` functions to create customized
validation functions for their plugin. Any function that matches the
`TestCheckFunc` function signature of `func(*terraform.State) error` can be used
individually, or with other `TestCheckFunc` functions with one of the above
Aggregate functions.

It's common to write custom `TestCheckFunc` functions to validate resources were
created correctly by using SDKs directly to verify identity and properties of
resources. These functions can retrieve information by SDKs and provide the
results to other `TestCheckFunc` methods. The below example uses
`ComposeTestCheckFunc` to group a set of `TestCheckFunc` functions together. The
first function `testAccCheckExampleWidgetExists` uses the `Example` service SDK
directly, and queries it for the ID of the widget we have in state. Once found,
the result is stored into the `widget` struct declared at the beginning of the
test function. The next check function `testAccCheckExampleWidgetAttributes`
receives the updated `widget` and checks its attributes. The final check
`TestCheckResourceAttr` verifies that the same value is stored in state.

```go
func TestAccExampleWidget_basic(t *testing.T) {
  var widget example.WidgetDescription

  resource.Test(t, resource.TestCase{
    PreCheck:     func() { testAccPreCheck(t) },
    Providers:    testAccProviders,
    CheckDestroy: testAccCheckExampleWidgetDestroy,
    Steps: []resource.TestStep{
			{
        Config: testAccExampleWidgetConfig,
        Check: resource.ComposeTestCheckFunc(
          testAccCheckExampleWidgetExists("example_widget.bar", &widget),
          testAccCheckExampleWidgetAttributes(&widget),
          resource.TestCheckResourceAttr("example_widget.bar", "active", "true"),
        ),
      },
    },
  })
}

// testAccCheckExampleWidgetAttributes verifies attributes are set correctly by 
// Terraform
func testAccCheckExampleWidgetAttributes(widget *example.WidgetDescription) resource.TestCheckFunc {
  return func(s *terraform.State) error {
    if *widget.active != true {
      return fmt.Errorf("widget is not active")
    }

    return nil
  }
}

// testAccCheckExampleWidgetExists uses the Example SDK directly to retrieve 
// the Widget description, and stores it in the provided 
// *example.WidgetDescription
func testAccCheckExampleWidgetExists(resourceName string, widget *example.WidgetDescription) resource.TestCheckFunc {
  return func(s *terraform.State) error {
    // retrieve the resource by name from state
    rs, ok := s.RootModule().Resources[resourceName]
    if !ok {
      return fmt.Errorf("Not found: %s", resourceName)
    }

    if rs.Primary.ID == "" {
      return fmt.Errorf("Widget ID is not set")
    }

    // retrieve the client from the test provider
    client := testAccProvider.Meta().(*ExampleClient)

    response, err := client.DescribeWidgets(&example.DescribeWidgetsInput{
      WidgetIDs: []string{rs.Primary.ID},
    })

    if err != nil {
      return err
    }

    // we expect only a single widget by this ID. If we find zero, or many, 
    // then we consider this an error
    if len(response.WidgetDescriptions) != 1 ||
      *response.WidgetDescriptions[0].WidgetID != rs.Primary.ID {
      return fmt.Errorf("Widget not found")
    }

    // store the resulting widget in the *example.WidgetDescription pointer
    *widget = *response.WidgetDescriptions[0]
    return nil
  }
}
```

## Sweepers

Acceptance Testing is an essential approach to validating the implementation of a Terraform Provider. Using actual APIs to provision resources for testing can leave behind real infrastructure that costs money between tests. The reasons for these leaks can vary, regardless Terraform provides a mechanism known as [Sweepers](/terraform/plugin/testing/acceptance-tests/sweepers) to help keep the testing account clean.
